2008-06-24  Martin Lambers <marlam@marlam.de>

	* configure.ac: Fix linking with libGLEW in some situations.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* configure.ac: Bump version to 0.2.1. Require CVL >= 0.2.4 to benefit
	from some bug fixes.
	* NEWS, doc/cvltonemap.1, doc/cvltonemap.texi: Update for version
	0.2.1.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-14  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
	textures.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, src/Makefile.am: Fix potential problems with
	VPATH builds.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.

2008-01-16  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.cpp: Fix some parameter defaults and ranges.

2008-01-15  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the ashikhmin02 method.

2008-01-14  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.cpp: Tune default values for reinhard05 method.
	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the reinhard02 method.
	* src/view_area.h, src/view_area.cpp: Update to new CVL interfaces.
	Improves performance.
	* conf/conf.cpp: Fix error message for invalid contents.

2008-01-13  Martin Lambers <marlam@marlam.de>

	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
	Add support for the reinhard05 method.
